@@ -1,3 +1,8 @@
+2004-08-21 Sivaiah Nallagatla <snallagatla@novell.com>
+
+        * mail-erros.xml : changed the groupwise account setup error
+        message
+
 2004-08-16  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #62963.
